<resources>
    <string name="app_name">Encontre meu IMC</string>
    <string name="height_label">Altura (ex.: 1.50)</string>
    <string name="weight_label">Peso (ex.: 50.0)</string>
    <string name="calculate_button_label">Calcular</string>
    <string name="clear_button_label">Limpar</string>
    <string name="imc_display_text">Seu IMC: </string>
    <string name="know_imc_label">Entenda seu IMC:</string>
    <string name="slimness_display_label">MAGREZA (menor que 18.5)</string>
    <string name="normal_display_label">NORMAL (entre 18.5 e 24.9)</string>
    <string name="overweight_display_label">SOBREPESO (entre 25.0 e 29.9)</string>
    <string name="obesity_display_label">OBESIDADE (entre 30.0 e 39.9)</string>
    <string name="gravity_obesity_label">OBESIDADE GRAVE (maior que 40.0)</string>
</resources>