<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:layout_marginTop="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="20dp">


    <LinearLayout
        android:id="@+id/labels_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/dimensions_horizontal"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/height_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height_label"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/weight_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="89dp"
            android:text="@string/weight_label"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="@id/height_label" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dimensions_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/buttons_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labels_horizontal">


        <EditText
            android:id="@+id/height_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/weight_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dimensions_horizontal">


        <Button
            android:id="@+id/calculate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calculate_button_label"
            android:backgroundTint="@color/colorPrimary"/>

        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear_button_label"
            android:backgroundTint="@color/colorAccent"/>
    </LinearLayout>

    <Button
        android:id="@+id/imc_display"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/imc_display_text"
        android:backgroundTint="@color/colorDisplay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttons_horizontal"
        android:clickable="false"
        android:textAlignment="textStart"
        android:textColor="@color/defaultTextColor"
        android:textStyle="bold"/>


</androidx.constraintlayout.widget.ConstraintLayout>